tests/schemas/protobuf_bad2.proto
syntax = "proto2";

import "hedwig/options.proto";

package tests.bad2;

message TripCreatedV1 {
  option (hedwig.message_options).major_version = 1;

  required string device_id = 1;
}

// error: missing TripCreatedV1

message DeviceCreatedV1 {
  option (hedwig.message_options).major_version = 1;

  required string device_id = 1;
}

message VehicleCreatedV1 {
  option (hedwig.message_options).major_version = 1;

  required string vehicle_id = 1;
}
